[package]
name = "wjl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
colored = "2.1.0"
serde = {version = "1.0.196", features = ["derive"]}
sha1_smol="1.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.20"
pad = "0.1.6"